--- a/src/styles/GettingStarted-Homepage.css
+++ b/src/styles/GettingStarted-Homepage.css
@@ -12,7 +12,6 @@
     align-items: center;
     font-weight: 650;
     text-align: center;
-    padding-bottom: 2vh;
     background: linear-gradient(to right, #7a37ed, #b74ce6);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -21,14 +20,11 @@
 .GettingStarted-Desc{
     font-family: 'Raleway';
     color: rgb(0, 0, 0);
-    padding-inline: 9vh;
     text-align: center;
-    padding-bottom: 2vh;
 }
 
 .Steps{
     text-align: center;
-    padding: 2vh;
     background-color: #f5f5f5;
     border-radius: 25px;
     margin: 0 auto;
